--- a/openidl-common-ui/src/app/components/table/table.component.css
+++ b/openidl-common-ui/src/app/components/table/table.component.css
@@ -1,4 +1,4 @@
-table.table thead {
+/* table.table thead {
     background-color: #f5f7fa;
     border: 1px solid #dfe3e6;
 }
@@ -85,4 +85,4 @@ table.table tbody tr td.report-status.activeLink {
   color:#bbb !important;
   top: -1px !important;
   bottom:0;
-}
+} */
