--- a/openidl-common-ui/src/styles.css
+++ b/openidl-common-ui/src/styles.css
@@ -1,4 +1,4 @@
-@import "~ng-pick-datetime/assets/style/picker.min.css";
+/* @import "~ng-pick-datetime/assets/style/picker.min.css"; */
 @import 'styles/font.css';
 @import 'styles/reset.css';
 @import 'styles/helper.css';
