--- a/openidl-ui/src/styles.css
+++ b/openidl-ui/src/styles.css
@@ -1,4 +1,5 @@
-@import "../lib/src/styles.css";
+@import '../../openidl-common-ui/src/styles.css';
+
 /* @import "assets/styles/font.css";
 @import "assets/styles/reset.css"; */
 /* @import "assets/styles/helper.css"; */
