--- a/openidl-common-ui/src/app/components/search/search.component.html
+++ b/openidl-common-ui/src/app/components/search/search.component.html
@@ -1,6 +1,20 @@
 <div class="search-container">
-  <input type="text" [(ngModel)]='searchInput' (keydown.enter)='search($event)' placeholder='Search for data call'>
-  <span class="glyphicon glyphicon-search search-icon"></span>
-  <button type="button" class="btn btn-primary btn-clearsearch" (click)="search('clear')" [disabled]="searchButtonReadOnly">Clear Search</button>
+	<div class="input-group">
+		<input
+			class="form-control"
+			type="text"
+			[(ngModel)]="searchInput"
+			(keydown.enter)="search($event)"
+			placeholder="Search for data call"
+		/>
+		<span class="glyphicon glyphicon-search search-icon"></span>
+		<button
+			type="button"
+			class="btn btn-outline-primary btn-clearsearch"
+			(click)="search('clear')"
+			[disabled]="!searchButtonReadOnly"
+		>
+			Clear Search
+		</button>
+	</div>
 </div>
-
