--- a/openidl-common-ui/src/styles.scss
+++ b/openidl-common-ui/src/styles.scss
@@ -1,5 +1,5 @@
 /* @import "~ng-pick-datetime/assets/style/picker.min.css"; */
-@import 'styles/font.css';
+/* @import 'styles/font.css';
 @import 'styles/reset.css';
 @import 'styles/helper.css';
 @import 'styles/override.css';
@@ -7,5 +7,13 @@
 
 html {
   background-color:#F4F7FB;
-}
+} */
 
+html,
+body {
+	height: 100%;
+}
+body {
+	margin: 0;
+	font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
