--- a/openidl-ui/src/app/login/login.component.html
+++ b/openidl-ui/src/app/login/login.component.html
@@ -1,40 +1,164 @@
 <div class="main-div">
-  <div class="row">
-      <div class="col-sm-6">
+	<mat-grid-list cols="2">
+		<mat-grid-tile></mat-grid-tile>
+		<mat-grid-tile>
+			<form [formGroup]="userForm" (ngSubmit)="login(userForm.value)">
+				<mat-card class="login-card">
+					<mat-card-header class="header">
+						<img
+							class="image"
+							mat-card-image
+							src="../../assets/images/OpenIDL_Login_Logo.png"
+							alt="OpenIDL Logo"
+						/>
+					</mat-card-header>
 
-      </div>
-      <div class="col-sm-6">
-          <div class="card">
-              <div class="card-header">
-                  <div class="img-div">
-                      <img src="../../assets/images/OpenIDL_Login_Logo.png">
-                  </div>
-              </div>
-              <div class="card-content">
-                  <span class="text-heading">Sign In</span><br>
-                  <form name='loginForm' [formGroup]='userForm'> <!--  (submit)="login($event, {'username': username, 'password': password})" ---->
-                      <div class="form-group">
-                          <label for="usr" class="input-label-user">Username</label>
-                          <input type="text" name='username' class="form-control" id="usr" formControlName="username">
-                      </div>
-                      <div class="form-group">
-                          <label for="pwd" class="input-label-pass">Password</label>
-                          <input type="password" name='password' formControlName="password" class="form-control pass" id="pwd">
-                      </div>
-                      <!-- <a href="">
-                          <span class="span-style">Forgot Username / Password</span>
-                      </a> -->
-                      <div class="col-sm-12 no-row-padding">
-                        <app-notify *ngIf='isError' [type] = 'this.type' [message]='this.message' [title]='this.title' (close)='closeNotify()'></app-notify>
-                      </div>
-                      <div class="btn-center">
-                          <button type="submit" class="btn btn-primary btn-login" (click)='login(userForm.value)' (keyup.enter)='login(userForm.value)'>Login
-                              <div *ngIf='isSpinner' class="lds-css" style='position:absolute;'><div style="width:15px !important;height:15px !important" class="lds-rolling"><div style='top:10px;left:20px;'></div></div></div>
-                          </button>
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-  </div>
+					<mat-card-content class="content">
+						<p class="heading">Sign In</p>
+						<div class="row">
+							<div class="col">
+								<mat-form-field
+									class="full-width"
+									appearance="outline"
+								>
+									<mat-label>Username</mat-label>
+									<input
+										matInput
+										name="username"
+										formControlName="username"
+									/>
+									<mat-error
+										*ngIf="
+											userForm.controls[
+												'username'
+											].hasError('required')
+										"
+									>
+										Username is <strong>required</strong>
+									</mat-error>
+								</mat-form-field>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<mat-form-field
+									class="full-width"
+									appearance="outline"
+								>
+									<mat-label>Password</mat-label>
+									<input
+										matInput
+										type="password"
+										name="password"
+										placeholder="Password"
+										formControlName="password"
+									/>
+									<mat-error
+										*ngIf="
+											userForm.controls[
+												'password'
+											].hasError('required')
+										"
+									>
+										Password is <strong>required</strong>
+									</mat-error>
+								</mat-form-field>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col center">
+								<button
+									class="login-button"
+									[class.spinner]="isSpinner"
+									[disabled]="isSpinner"
+									mat-flat-button
+									color="primary"
+									type="submit"
+								>
+									LOGIN
+								</button>
+							</div>
+						</div>
+					</mat-card-content>
+				</mat-card>
+			</form>
+		</mat-grid-tile>
+	</mat-grid-list>
+	<!-- <div class="row">
+		<div class="col-sm-6"></div>
+		<div class="col-sm-6">
+			<div class="card">
+				<div class="card-header">
+					<div class="img-div">
+						<img src="../../assets/images/OpenIDL_Login_Logo.png" />
+					</div>
+				</div>
+				<div class="card-content">
+					<span class="text-heading">Sign In</span><br />
+					<form name="loginForm" [formGroup]="userForm">
+						<div class="form-group">
+							<label for="usr" class="input-label-user"
+								>Username</label
+							>
+							<input
+								type="text"
+								name="username"
+								class="form-control"
+								id="usr"
+								formControlName="username"
+							/>
+						</div>
+						<div class="form-group">
+							<label for="pwd" class="input-label-pass"
+								>Password</label
+							>
+							<input
+								type="password"
+								name="password"
+								formControlName="password"
+								class="form-control pass"
+								id="pwd"
+							/>
+						</div>
+						<div class="col-sm-12 no-row-padding">
+							<app-notify
+								*ngIf="isError"
+								[type]="this.type"
+								[message]="this.message"
+								[title]="this.title"
+								(close)="closeNotify()"
+							></app-notify>
+						</div>
+						<div class="btn-center">
+							<button
+								type="submit"
+								class="btn btn-primary btn-login"
+								(click)="login(userForm.value)"
+								(keyup.enter)="login(userForm.value)"
+							>
+								Login
+								<div
+									*ngIf="isSpinner"
+									class="lds-css"
+									style="position: absolute"
+								>
+									<div
+										style="
+											width: 15px !important;
+											height: 15px !important;
+										"
+										class="lds-rolling"
+									>
+										<div
+											style="top: 10px; left: 20px"
+										></div>
+									</div>
+								</div>
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div> -->
 </div>
