move common scss to common-ui project updated scss references

--- a/openidl-ui/src/app/header/header.component.scss
+++ b/openidl-ui/src/app/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../_variables.scss';
+@import '../../../../openidl-common-ui/src/variables';
 
 .header {
 	border-bottom: 0.2rem solid $primary-dark;
