--- a/openidl-ui/src/app/login/login.component.scss
+++ b/openidl-ui/src/app/login/login.component.scss
@@ -1,4 +1,4 @@
-@import '../../_variables.scss';
+@import '../../../../openidl-common-ui/src/variables';
 
 .main-div {
 	background-image: url('../../assets/images/LandingBG.png');
