--- a/openidl-common-ui/src/app/components/table/table.component.html
+++ b/openidl-common-ui/src/app/components/table/table.component.html
@@ -1,114 +1,145 @@
-<table
-	datatable
-	class="row-border hover"
-	[dtOptions]="dtOptions"
-	[dtTrigger]="dtTrigger"
-	*ngIf="!isSpinner"
->
-	<thead>
-		<tr>
-			<th style="width: 15%">Name</th>
-			<th style="width: 10%">Deadline</th>
-			<th style="width: 10%">Jurisdiction</th>
-			<th style="width: 8%">Line of Business</th>
-			<th style="width: 10%; text-align: right; padding-right: 25px">
+<div class="mat-elevation-z1 data-table">
+	<table mat-table class="width-table" matSort [dataSource]="data">
+		<!-- Name Column -->
+		<ng-container matColumnDef="name">
+			<th
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-name"
+			>
+				Name
+			</th>
+			<td mat-cell *matCellDef="let row">{{ row.name }}</td>
+		</ng-container>
+
+		<!-- Deadline Column -->
+		<ng-container matColumnDef="deadline">
+			<th
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-deadline"
+			>
+				Deadline
+			</th>
+			<td mat-cell *matCellDef="let row">
+				{{ row.deadline | date: 'MM/dd/yyyy' }}
+			</td>
+		</ng-container>
+		<!-- Jurisdiction Column -->
+		<ng-container matColumnDef="jurisdiction">
+			<th
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-jurisdiction"
+			>
+				Jurisdiction
+			</th>
+			<td mat-cell *matCellDef="let row">{{ row.jurisdiction }}</td>
+		</ng-container>
+		<!-- lineOfBusiness Column -->
+		<ng-container matColumnDef="lineOfBusiness">
+			<th
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-line-of-business"
+			>
+				Line Of Business
+			</th>
+			<td mat-cell *matCellDef="let row">{{ row.lineOfBusiness }}</td>
+		</ng-container>
+		<!-- Version Column -->
+		<ng-container matColumnDef="version">
+			<th
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-version"
+			>
 				Version No.
 			</th>
-			<!-- <th *ngIf='status === "DRAFT"' style="width: 10%;text-align:right">
-                <mfDefaultSorter by="draftVersions">No. of Drafts</mfDefaultSorter>
-            </th> -->
+			<td mat-cell *matCellDef="let row">{{ row.version }}</td>
+		</ng-container>
+		<!-- Status Column -->
+		<ng-container
+			matColumnDef="noOfLikes"
+			*ngIf="status === statusObj.DRAFT"
+		>
 			<th
-				*ngIf="status === statusObj.DRAFT"
-				style="width: 10%; text-align: right; padding-right: 60px"
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-status draft"
 			>
 				Likes
 			</th>
+			<td mat-cell *matCellDef="let row">{{ row.noOfLikes }}</td>
+		</ng-container>
+		<ng-container
+			matColumnDef="noOfConsents"
+			*ngIf="status === statusObj.ISSUED"
+		>
 			<th
-				*ngIf="status === statusObj.ISSUED"
-				style="width: 10%; text-align: right; padding-right: 50px"
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-status issued"
 			>
 				Consents
 			</th>
-			<th *ngIf="status === statusObj.ISSUED" style="width: 10%">
+			<td mat-cell *matCellDef="let row">{{ row.noOfConsents }}</td>
+		</ng-container>
+		<ng-container
+			matColumnDef="reportStatus"
+			*ngIf="status === statusObj.ISSUED"
+		>
+			<th
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				class="col-status"
+			>
 				Report Status
 			</th>
+			<td mat-cell *matCellDef="let row">{{ row.reportStatus }}</td>
+		</ng-container>
+		<!-- Updated Date Column -->
+		<ng-container matColumnDef="updatedTs">
 			<th
-				style="width: 12%; padding-left: 20px"
-				[ngStyle]="{
-					'padding-left':
-						status === statusObj.CANCELLED ? '5%' : '20px'
-				}"
+				mat-header-cell
+				*matHeaderCellDef
+				mat-sort-header
+				[ngClass]="{ cancelled: status === statusObj.CANCELLED }"
+				class="col-updated-date"
 			>
 				Updated Date
 			</th>
-		</tr>
-	</thead>
-	<tbody *ngIf="isRecord">
-		<tr *ngFor="let row of data" (click)="viewDraft(data)">
-			<td>{{ row.name }}</td>
-			<td>{{ row.deadline | date: 'MM/dd/yyyy' }}</td>
-			<td>{{ row.jurisdiction }}</td>
-			<td>{{ row.lineOfBusiness }}</td>
-			<td style="text-align: right">{{ row.version }}</td>
-			<!-- <td *ngIf='status === "DRAFT"' style='text-align:right'>{{row.draftVersions}}</td> -->
-			<td
-				*ngIf="status === statusObj.DRAFT"
-				style="text-align: right; padding-right: 48px"
-			>
-				{{ row.noOfLikes }}
-			</td>
-			<td
-				*ngIf="status === statusObj.ISSUED"
-				style="text-align: right; padding-right: 35px"
-			>
-				{{ row.noOfConsents }}
-			</td>
-			<td
-				*ngIf="status === statusObj.ISSUED"
-				class="report-status"
-				(click)="
-					viewReport($event, row, row.reportStatus, row.reportUrl)
-				"
-				[ngClass]="{
-					activeLink:
-						row.reportStatus &&
-						!(row.reportStatus.toLowerCase() === 'awaiting')
-				}"
-				style="cursor: default"
-			>
-				<!-- &&((!(this.role === 'carrier' && (row.reportStatus.toLowerCase() === 'candidate' || row.reportStatus.toLowerCase() === 'awaiting' || row.reportStatus.toLowerCase() === 'accepted')))) -->
-				{{ row.reportStatus }}
-			</td>
-			<td
-				style="padding-left: 20px"
-				[ngStyle]="{
-					'padding-left':
-						status === statusObj.CANCELLED ? '5%' : '20px'
-				}"
-			>
+			<td mat-cell *matCellDef="let row">
 				{{ row.updatedTs | date: 'MM/dd/yyyy' }}
 			</td>
-		</tr>
-	</tbody>
-	<tbody *ngIf="!isRecord">
-		<tr>
-			<td colspan="8">No {{ statusText }} data calls are available</td>
-		</tr>
-	</tbody>
-	<!-- <tfoot>
-		<tr>
-			<td colspan="8">
-				<app-pagination
-					[Records]="pageCount"
-					[currentIndex]="currentIndex"
-					(getPageByIndexEvent)="getDatacallsByIndex($event)"
-					(getNextPageEvent)="getNextDatacalls()"
-					(getPrevPageEvent)="getPrevDatacalls()"
-				></app-pagination>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="draftColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: draftColumns"></tr>
+		<tr class="mat-row" *matNoDataRow>
+			<td class="mat-cell" colspan="9999">
+				No {{ statusText }} data calls are available
 			</td>
 		</tr>
-	</tfoot> -->
-</table>
+	</table>
+
+	<mat-paginator
+		#paginator
+		[length]="50"
+		[pageIndex]="0"
+		[pageSize]="10"
+		[pageSizeOptions]="[5, 10, 20]"
+	>
+	</mat-paginator>
+</div>
 <app-spinner *ngIf="isSpinner"></app-spinner>
 
 <app-modal
