--- a/openidl-ui/src/app/header/header.component.scss
+++ b/openidl-ui/src/app/header/header.component.scss
@@ -5,6 +5,7 @@
 	height: 5rem;
 	background-color: $white;
 	padding: 2rem;
+	margin-bottom: 2rem;
 
 	mat-nav-list.list-horizontal {
 		padding: 0;
