--- a/openidl-ui/src/app/datacall-list/datacall-list.component.scss
+++ b/openidl-ui/src/app/datacall-list/datacall-list.component.scss
@@ -3,7 +3,7 @@
 .data-call-list {
 	.status-group {
 		.button {
-			width: 9rem;
+			width: 8rem;
 			.text {
 				margin-left: 3px;
 			}
@@ -14,7 +14,7 @@
 		}
 	}
 
-	.data-table {
+	.mtb-1 {
 		margin: 1rem 0;
 	}
 }
