--- a/openidl-ui/src/app/datacall-list/datacall-list.component.html
+++ b/openidl-ui/src/app/datacall-list/datacall-list.component.html
@@ -1,78 +1,75 @@
 <div class="data-call-list">
 	<app-header [selected]="selected"></app-header>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-1"></div>
-
-			<div class="col-sm-10">
-				<h1 class="header-with-icon">
-					<mat-icon color="primary">table_chart</mat-icon>
-					<span>Data Call List</span>
-				</h1>
-				<app-search (searchValue)="search($event)"></app-search>
-				<div class="pb-4"></div>
-				<mat-button-toggle-group
-					[value]="selectedTab"
-					[(ngModel)]="selectedTab"
-					(change)="onStatusGroupChange($event)"
-					#group="matButtonToggleGroup"
-					class="status-group"
+	<div class="container">
+		<h1 class="header-with-icon">
+			<mat-icon color="primary">table_chart</mat-icon>
+			<span>Data Call List</span>
+		</h1>
+		<mat-card>
+			<app-search (searchValue)="search($event)"></app-search>
+			<div class="pb-4"></div>
+			<mat-button-toggle-group
+				appearance="legacy"
+				[value]="selectedTab"
+				[(ngModel)]="selectedTab"
+				(change)="onStatusGroupChange($event)"
+				#group="matButtonToggleGroup"
+				class="status-group"
+			>
+				<mat-button-toggle
+					class="button"
+					[value]="0"
+					aria-label="Drafts"
 				>
-					<mat-button-toggle
-						class="button"
-						[value]="0"
-						aria-label="Drafts"
-					>
-						<mat-icon>mode_edit</mat-icon>
-						<span class="text">Drafts</span>
-					</mat-button-toggle>
-					<mat-button-toggle
-						class="button"
-						[value]="1"
-						aria-label="Issued"
-					>
-						<mat-icon>grading</mat-icon>
-						<span class="text">Issued</span>
-					</mat-button-toggle>
-					<mat-button-toggle
-						class="button"
-						[value]="2"
-						aria-label="Abandoned"
-					>
-						<mat-icon>cancel_presentation</mat-icon>
-						<span class="text">Abandoned</span>
-					</mat-button-toggle>
-				</mat-button-toggle-group>
-				{{ selectedTab }}
+					<mat-icon>mode_edit</mat-icon>
+					<span class="text">Drafts</span>
+				</mat-button-toggle>
+				<mat-button-toggle
+					class="button"
+					[value]="1"
+					aria-label="Issued"
+				>
+					<mat-icon>grading</mat-icon>
+					<span class="text">Issued</span>
+				</mat-button-toggle>
+				<mat-button-toggle
+					class="button"
+					[value]="2"
+					aria-label="Abandoned"
+				>
+					<mat-icon>cancel_presentation</mat-icon>
+					<span class="text">Abandoned</span>
+				</mat-button-toggle>
+			</mat-button-toggle-group>
 
-				<div class="data-table">
-					<app-table
-						*ngIf="selectedTab === 0"
-						[status]="statusObj.DRAFT"
-						(viewDraftEvent)="viewDraft($event)"
-						(viewIssuedEvent)="viewIssued($event)"
-						(viewReportEvent)="viewReport($event)"
-					></app-table>
-					<!-- <app-table
-						*ngIf="selectedTab === 1"
-						[status]="statusObj.ISSUED"
-						(viewDraftEvent)="viewDraft($event)"
-						(viewIssuedEvent)="viewIssued($event)"
-						(viewReportEvent)="viewReport($event)"
-					></app-table>
-					<app-table
-						*ngIf="selectedTab === 2"
-						[status]="statusObj.CANCELLED"
-						(viewDraftEvent)="viewDraft($event)"
-						(viewIssuedEvent)="viewIssued($event)"
-						(viewReportEvent)="viewReport($event)"
-						(viewAbandonedEvent)="viewAbandoned($event)"
-					></app-table> -->
-				</div>
-
-				<app-blocks-history></app-blocks-history>
+			<div class="mtb-1">
+				<app-table
+					*ngIf="selectedTab === 0"
+					[status]="statusObj.DRAFT"
+					(viewDraftEvent)="viewDraft($event)"
+					(viewIssuedEvent)="viewIssued($event)"
+					(viewReportEvent)="viewReport($event)"
+				></app-table>
+				<app-table
+					*ngIf="selectedTab === 1"
+					[status]="statusObj.ISSUED"
+					(viewDraftEvent)="viewDraft($event)"
+					(viewIssuedEvent)="viewIssued($event)"
+					(viewReportEvent)="viewReport($event)"
+				></app-table>
+				<app-table
+					*ngIf="selectedTab === 2"
+					[status]="statusObj.CANCELLED"
+					(viewDraftEvent)="viewDraft($event)"
+					(viewIssuedEvent)="viewIssued($event)"
+					(viewReportEvent)="viewReport($event)"
+					(viewAbandonedEvent)="viewAbandoned($event)"
+				></app-table>
 			</div>
-			<div class="col-sm-1"></div>
+		</mat-card>
+
+		<div class="mtb-1">
+			<app-blocks-history></app-blocks-history>
 		</div>
 	</div>
 </div>
