#9 block history component updated

--- a/openidl-common-ui/src/app/components/blocks-history/blocks-history.component.html
+++ b/openidl-common-ui/src/app/components/blocks-history/blocks-history.component.html
@@ -1,18 +1,12 @@
-<div class="col-sm-12 text-left main-container no-row-padding block-history">
-  <div class="col-sm-12 no-row-padding third-container">
-      <div class="container"></div>
-      <accordion>
-          <accordion-group>
-              <div class="accord-heading" accordion-heading (click)='toggle()'>Blockchain Shared Ledger
-                  <i *ngIf='!isOpen' class='glyphicon glyphicon-triangle-bottom pull-right' style='color:#3d70b2 !important;font-size: 14px !important;'></i>
-                  <i *ngIf='isOpen' class='glyphicon glyphicon-triangle-top pull-right' style='color:#3d70b2 !important;font-size: 14px !important;'></i>
-              </div>
-              <ul class='col-sm-12 no-row-padding'>
-                <li class='col-sm-2' *ngFor='let block of blockList'>
-                  {{block}}
-                </li>
-              </ul>
-          </accordion-group>
-      </accordion>
-  </div>
-</div>
+<mat-accordion class="block-list">
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Blockchain Shared Ledger</mat-panel-title>
+		</mat-expansion-panel-header>
+		<ul>
+			<li *ngFor="let block of blockList">
+				{{ block }}
+			</li>
+		</ul>
+	</mat-expansion-panel>
+</mat-accordion>
