#9 Data Call List search function fixed

--- a/openidl-common-ui/src/app/components/search/search.component.html
+++ b/openidl-common-ui/src/app/components/search/search.component.html
@@ -13,7 +13,7 @@
 			matSuffix
 			color="accent"
 			(click)="search('clear')"
-			[disabled]="!searchButtonReadOnly"
+			[disabled]="searchButtonReadOnly"
 		>
 			<mat-icon>clear</mat-icon>
 		</button>
