--- a/openidl-common-ui/src/app/components/table/table.component.html
+++ b/openidl-common-ui/src/app/components/table/table.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z0 data-table">
-	<table mat-table class="width-table" matSort [dataSource]="data">
+	<table mat-table class="width-table" matSort>
 		<!-- Name Column -->
 		<ng-container matColumnDef="name">
 			<th
