#9 table sorting and console error fixed

--- a/openidl-common-ui/src/app/components/search/search.component.html
+++ b/openidl-common-ui/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search-component">
-	<mat-form-field appearance="fill" class="full-width">
+	<mat-form-field appearance="outline" class="full-width">
 		<mat-label>Search for call data</mat-label>
 		<mat-icon matPrefix color="primary">search</mat-icon>
 		<input
