--- a/openidl-ui/src/app/datacall-list/datacall-list.component.scss
+++ b/openidl-ui/src/app/datacall-list/datacall-list.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../openidl-common-ui/src/variables';
 
 .data-call-list {
+	padding-bottom: 3rem;
 	.status-group {
 		.button {
 			width: 8rem;
