--- a/openidl-common-ui/src/app/components/table/table.component.scss
+++ b/openidl-common-ui/src/app/components/table/table.component.scss
@@ -5,6 +5,11 @@
 		width: 100%;
 	}
 
+	.mat-row:hover {
+		background-color: $table-hover;
+		cursor: pointer;
+	}
+
 	// .col-name {
 	// 	width: 15%;
 	// }
