--- a/openidl-common-ui/src/_variables.scss
+++ b/openidl-common-ui/src/_variables.scss
@@ -45,5 +45,28 @@ $primary: mat.get-color-from-palette($primary-palette, 500);
 $primary-dark: mat.get-color-from-palette($primary-palette, 900);
 
 $warn: mat.get-color-from-palette($primary-palette, 500);
+$table-hover: mat.get-color-from-palette($primary-palette, 50);
 
-$white: #fff;
+$white: #ffffff;
+
+@keyframes spinner {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.spinner:before {
+	content: '';
+	box-sizing: border-box;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 20px;
+	height: 20px;
+	margin-top: -10px;
+	margin-left: -10px;
+	border-radius: 50%;
+	border: 2px solid $white;
+	border-top-color: $primary;
+	animation: spinner 0.8s linear infinite;
+}
