--- a/openidl-ui/src/app/header/header.component.scss
+++ b/openidl-ui/src/app/header/header.component.scss
@@ -7,21 +7,12 @@
 	padding: 2rem;
 	margin-bottom: 2rem;
 
-	mat-nav-list.list-horizontal {
-		padding: 0;
-		.mat-list-item {
-			display: inline-block;
-			height: auto;
-			width: auto;
-			color: $primary;
-			margin: 0 0.3rem;
-		}
-
-		.active {
-			background: $primary;
-			color: $white;
-			border-radius: 5px;
-		}
+	button {
+		margin: 0 0.2rem;
+	}
+	.active {
+		background: $primary;
+		color: $white;
 	}
 
 	.logo {
